  :class:`rpy2.robjects.language.LangVector`) but is now at the interface level.

- :meth:`rpy2.rinterface.get_evaluation_context` is deprecated. The module
  level context variable `evaluation_context` should be used instead. The
  use of the context variable should address issues when using nested
  :meth:`rpy2.rinterface.local_context`.


- Added recommendation to try :meth:`pandas.DataFrame.infer_objects` when
  the converion to R data frames fails because of mixed types (issue #794).

Bugs fixed
----------

- R warning about partial argument name matching is now cleared (issue #821).

- Setting a slice for a StrSexpVector where some of the elements are not strings
  no longer fails.

- Assigning items to an R array of strings using a slice of more than one
  element was likely to fail.

- The :mod:`rpy2.rinterface`-level conversion of Python integers to R integers is now
  checking that integers are not larger than what R can handle.
  
- Trying to access items in an R environment before R is initialized is no
  longer ending with a segfault (issue #842).


Release 3.4.6
=============

- Added a class and an alias to map ggplot2's `element_line` (issue #822).


Release 3.4.5
=============

Changes
-------

- The deprecation warning when using :func:`rpy2.robjects.lib.grid.activate`
  was missing (indirectly revealed through issue #804).

- The named argument `LINPACK` in :meth:`rpy2.robjects.vectors.Matrix.svd`
  is no longer present in R.

Bugs fixed
----------

- SIGPIPE sent to a process running Python+rpy2 could result in a segfault.
  This was caused by an incorrect setting of R signal handlers (issue #809).


Release 3.4.4
==============

Changes
-------

- `RRuntimeError` exceptions raised while evaluating R code
  an R magic (ipython/jupyter) are now propagated (issue #792).
  


Release 3.4.3
=============

New features
------------

- :mod:`rpy2.robjects.lib.ggplot2` maps more functions in the
  R package (issue #767)
